crates/pamoja-ffi/include/pamoja.h

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
  // A security check failed, such as an invalid identity or a bad signature.
  PamojaStatus_Auth = 9,
} PamojaStatus;
// Which direction an I2C transfer runs, as the read/write bit encodes it.
typedef enum {
  // The controller writes to the device. Read/write bit `0`.
  PamojaI2cDirection_Write = 0,
  // The controller reads from the device. Read/write bit `1`.
  PamojaI2cDirection_Read = 1,
} PamojaI2cDirection;
// The physical voltage level on a pin.
typedef enum {
  // A low level, near ground.
  PamojaPinLevel_Low = 0,
  // A high level, near the supply voltage.
  PamojaPinLevel_High = 1,
} PamojaPinLevel;
// The signal transition that triggers a pin interrupt.
typedef enum {
  // A low-to-high transition.
  PamojaPinEdge_Rising = 0,
  // A high-to-low transition.
  PamojaPinEdge_Falling = 1,
  // Either transition.
  PamojaPinEdge_Both = 2,
} PamojaPinEdge;
// Whether a signal is asserted by a high or a low physical level.
typedef enum {
  // A high level means asserted.
  PamojaPinPolarity_ActiveHigh = 0,
  // A low level means asserted, the wiring of most buttons and relay boards.
  PamojaPinPolarity_ActiveLow = 1,
} PamojaPinPolarity;
// An opaque handle to a CAN frame.
//
// Read it with the `pamoja_can_frame_*` calls, then release it with
// [`pamoja_can_frame_free`].
typedef struct PamojaCanFrame PamojaCanFrame;
// The fields J1939 packs into an extended CAN identifier.
//
// Every field is a scalar, so this crosses the boundary by value. `addressed` is
// `1` for a PDU1 message, where `destination` names the node the message is for,
// and `0` for a PDU2 broadcast, where `destination` carries no meaning.
typedef struct {
  // The parameter group number, which names what the message carries.
  uint32_t pgn;
  // The message priority, 0 (highest) to 7.
  uint8_t priority;
  // The source address: the node that sent the message.
  uint8_t source;
  // The PDU format byte of the parameter group.
  uint8_t pdu_format;
  // The destination address, meaningful only when `addressed` is `1`.
  uint8_t destination;
  // `1` for an addressed (PDU1) message, `0` for a broadcast (PDU2) one.
  uint8_t addressed;
} PamojaJ1939Id;
// The eight data bytes of a J1939 frame, addressed by the signals inside them.
//
// A parameter group places each signal at a fixed byte offset, little-endian. The
// payload is only bytes, so it crosses the boundary by value, which keeps reading
// and writing a signal free of any allocation.
typedef struct {
  // The eight data bytes, in wire order.
  uint8_t bytes[8];
} PamojaJ1939Signals;
// A validated I2C device address.
//
// Build one with [`pamoja_i2c_address_seven_bit`] or
// [`pamoja_i2c_address_ten_bit`], which reject a value outside the width's
// range. Both fields are scalars, so this crosses the boundary by value.
typedef struct {
  // The address itself, without the read/write bit.
  uint16_t value;
  // `1` for a 10-bit address, `0` for a 7-bit one.
  uint8_t ten_bit;
} PamojaI2cAddress;
// Reports whether a frame is CAN-FD rather than classic CAN 2.0.
//
// # Returns
//
// `true` for a CAN-FD frame, `false` otherwise or for a null frame.
//
// # Safety
//
// `frame` must be a live handle from one of the frame constructors, or null.
bool pamoja_can_frame_is_fd(const PamojaCanFrame *frame);
// Reports whether a frame is a remote transmission request.
//
// # Returns
//
// `true` for a remote frame, `false` otherwise or for a null frame.
//
// # Safety
//
// `frame` must be a live handle from one of the frame constructors, or null.
bool pamoja_can_frame_is_remote(const PamojaCanFrame *frame);
// Returns how many payload bytes a frame carries.
//
// A remote frame reports the length it requests while carrying no data.
//
// # Returns
//
// The length, or 0 if `frame` is null.
//
// # Safety
//
// `frame` must be a live handle from one of the frame constructors, or null.
uintptr_t pamoja_can_frame_len(const PamojaCanFrame *frame);
// Returns a frame's data length code, the length as it appears on the wire.
//
// # Returns
//
// The code, or 0 if `frame` is null.
//
// # Safety
//
// `frame` must be a live handle from one of the frame constructors, or null.
uint8_t pamoja_can_frame_dlc(const PamojaCanFrame *frame);
// Returns a pointer to a frame's payload bytes.
//
// Use [`pamoja_can_frame_data_len`] for the length, not
// [`pamoja_can_frame_len`]: a remote frame reports the length it requests while
// carrying no payload at all.
//
// # Returns
//
// A pointer to the payload, or null if `frame` is null or carries no bytes.
//
// # Safety
//
// `frame` must be a live handle from one of the frame constructors, or null.
const uint8_t *pamoja_can_frame_data(const PamojaCanFrame *frame);
// Returns how many bytes [`pamoja_can_frame_data`] points to.
//
// This is the frame's length for an ordinary frame and 0 for a remote one,
// which requests a length without carrying the bytes.
//
// # Returns
//
// The payload length, or 0 if `frame` is null.
//
// # Safety
//
// `frame` must be a live handle from one of the frame constructors, or null.
uintptr_t pamoja_can_frame_data_len(const PamojaCanFrame *frame);
// Releases a frame handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `frame` must be a handle from one of the frame constructors that has not
// already been freed, or null. After this call it must not be used again.
void pamoja_can_frame_free(PamojaCanFrame *frame);
// Returns the data length code that encodes a payload length.
//
// # Returns
//
// The code for `len`, rounding up to the next length CAN-FD can carry.
uint8_t pamoja_can_len_to_dlc(uintptr_t len);
// Returns the payload length a data length code encodes.
//
// # Returns
//
// The length in bytes.
uintptr_t pamoja_can_dlc_to_len(uint8_t dlc);
// Decodes the J1939 fields out of an extended CAN identifier.
//
// # Returns
//
// `true` when `extended` is set, with `*out_message` filled in; `false` for a
// standard 11-bit identifier, which J1939 does not use, leaving `*out_message`
// untouched.
//
// # Safety
//
// `out_message` must point to a writable `PamojaJ1939Id`.
bool pamoja_can_j1939_decode(uint32_t id, bool extended, PamojaJ1939Id *out_message);
// Composes the extended CAN identifier a set of J1939 fields describes.
//
// # Returns
//
// The 29-bit identifier. `destination` is used only for an addressed (PDU1)
// parameter group and ignored for a broadcast (PDU2) one.
uint32_t pamoja_can_j1939_compose(uint8_t priority,
                                  uint32_t pgn,
                                  uint8_t source,
                                  uint8_t destination);
// Composes the identifier of a J1939 broadcast, which every node on the bus reads.
//
// # Returns
//
// The 29-bit identifier. Most parameter groups are broadcast, so this is the
// common case, and it saves a caller knowing the broadcast address.
uint32_t pamoja_can_j1939_broadcast(uint8_t priority, uint32_t pgn, uint8_t source);
// Builds a J1939 payload with every signal marked not available.
//
// # Returns
//
// Eight bytes of [`PAMOJA_J1939_NOT_AVAILABLE`], ready for a sender to write only
// the signals it has.
PamojaJ1939Signals pamoja_can_signals_new(void);
// Writes a one-byte signal at the offset its parameter group defines.
//
// # Returns
//
// The payload with the signal written, or unchanged if `at` is past its end.
PamojaJ1939Signals pamoja_can_signals_set_u8(PamojaJ1939Signals signals,
                                             uintptr_t at,
                                             uint8_t value);
// Writes a two-byte little-endian signal at the offset its group defines.
//
// # Returns
//
// The payload with the signal written, or unchanged if the signal would run past
// its end.
PamojaJ1939Signals pamoja_can_signals_set_u16(PamojaJ1939Signals signals,
                                              uintptr_t at,
                                              uint16_t value);
// Reads a one-byte signal at the offset its parameter group defines.
//
// # Returns
//
// `true` with `*out_value` set, or `false` if `at` is past the payload.
//
// # Safety
//
// `out_value` must point to a writable `uint8_t`.
bool pamoja_can_signals_u8(PamojaJ1939Signals signals, uintptr_t at, uint8_t *out_value);
// Reads a two-byte little-endian signal at the offset its group defines.
//
// # Returns
//
// `true` with `*out_value` set, or `false` if the signal would run past the
// payload.
//
// # Safety
//
// `out_value` must point to a writable `uint16_t`.
bool pamoja_can_signals_u16(PamojaJ1939Signals signals, uintptr_t at, uint16_t *out_value);
// Validates a 7-bit I2C address.
//
// The whole `0x00..=0x7F` range is accepted, reserved addresses included, since
// those are still legal on the wire. Test for them with
// [`pamoja_i2c_address_is_reserved`].
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_address` set, or
// [`PamojaStatus::InvalidArgument`] if `address` is above `0x7F`.
//
// # Safety
//
// `out_address` must point to a writable `PamojaI2cAddress`.
PamojaStatus pamoja_i2c_address_seven_bit(uint8_t address, PamojaI2cAddress *out_address);
// Validates a 10-bit I2C address.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_address` set, or
// [`PamojaStatus::InvalidArgument`] if `address` is above `0x3FF`.
//
// # Safety
//
// `out_address` must point to a writable `PamojaI2cAddress`.
PamojaStatus pamoja_i2c_address_ten_bit(uint16_t address, PamojaI2cAddress *out_address);
// Returns how many bytes an address frame occupies.
//
// # Returns
//
// `1` for a 7-bit address, `2` for a 10-bit one.
uintptr_t pamoja_i2c_address_frame_len(PamojaI2cAddress address);
// Writes the address bytes a controller puts on the bus for a transfer.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_len` set to how many bytes of
// `out_frame` were written, or [`PamojaStatus::InvalidArgument`] if the address
// is not one this SDK produced or `out_frame_cap` is smaller than
// [`pamoja_i2c_address_frame_len`].
//
// # Safety
//
// `out_frame` must point to at least `out_frame_cap` writable bytes, and
// `out_len` must point to a writable `size_t`.
PamojaStatus pamoja_i2c_address_frame(PamojaI2cAddress address,
                                      PamojaI2cDirection direction,
                                      uint8_t *out_frame,
                                      uintptr_t out_frame_cap,
                                      uintptr_t *out_len);
// Reports whether a 7-bit address falls in a range the I2C specification reserves.
//
// # Returns
//
// `true` for a 7-bit address in `0x00..=0x07` or `0x78..=0x7F`, which leaves
// `0x08..=0x77` for ordinary devices. A 10-bit address is never reserved in this
// sense.
bool pamoja_i2c_address_is_reserved(PamojaI2cAddress address);
// Reports whether an address is the general call address `0x00`.
//
// # Returns
//
// `true` for the broadcast every device on the bus listens to.
bool pamoja_i2c_address_is_general_call(PamojaI2cAddress address);
// Returns the `(CPOL, CPHA)` pair an SPI mode number names.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_cpol` set to whether the clock
// idles high and `*out_cpha` to whether data is sampled on the trailing edge, or
// [`PamojaStatus::InvalidArgument`] if `mode` is above 3.
//
// # Safety
//
// `out_cpol` and `out_cpha` must each point to a writable `bool`.
PamojaStatus pamoja_spi_mode_cpol_cpha(uint8_t mode, bool *out_cpol, bool *out_cpha);
// Returns the SPI mode number a `(CPOL, CPHA)` pair names.
//
// # Returns
//
// The mode number `0..=3`. Every pair names a mode, so this never fails.
uint8_t pamoja_spi_mode_from_cpol_cpha(bool cpol, bool cpha);
// Returns the level a boolean names.
//
// # Returns
//
// [`PamojaPinLevel::High`] for `true`, [`PamojaPinLevel::Low`] for `false`.
PamojaPinLevel pamoja_pin_level_from_bool(bool high);
// Returns the opposite level.
//
// # Returns
//
// The inverted level.
PamojaPinLevel pamoja_pin_level_inverted(PamojaPinLevel level);
// Reports whether a change from one level to another fires an interrupt trigger.
//
// # Returns
//
// `true` if the transition matches `edge`; `false` for the other direction or
// for no change at all.
bool pamoja_pin_edge_triggered_by(PamojaPinEdge edge, PamojaPinLevel from, PamojaPinLevel to);
// Returns the physical level that represents a logical state under a polarity.
//
// # Returns
//
// The level to drive, which for active-low wiring is the inverse of `asserted`.
PamojaPinLevel pamoja_pin_polarity_level(PamojaPinPolarity polarity, bool asserted);
// Reports whether a physical level means the signal is asserted.
//
// # Returns
//
// `true` if `level` asserts the signal under `polarity`.
bool pamoja_pin_polarity_is_asserted(PamojaPinPolarity polarity, PamojaPinLevel level);