bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.FieldIO.cs


    /// <summary>Reports whether a frame is CAN-FD rather than classic CAN 2.0.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_can_frame_is_fd(IntPtr frame);

    /// <summary>Reports whether a frame is a remote transmission request.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_can_frame_is_remote(IntPtr frame);

    /// <summary>Returns a frame's data length, which a remote frame only requests.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_can_frame_len(IntPtr frame);

    /// <summary>Returns a frame's data length code.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_can_frame_dlc(IntPtr frame);

    /// <summary>Returns a pointer to a frame's payload bytes.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_can_frame_data(IntPtr frame);

    /// <summary>Returns how many bytes the payload pointer covers.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_can_frame_data_len(IntPtr frame);

    /// <summary>Releases a CAN frame handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_can_frame_free(IntPtr frame);

    /// <summary>Returns the data length code that encodes a payload length.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_can_len_to_dlc(nuint len);

    /// <summary>Returns the payload length a data length code encodes.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_can_dlc_to_len(byte dlc);

    /// <summary>Decodes the J1939 fields out of an extended CAN identifier.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_can_j1939_decode(
        uint id,
        [MarshalAs(UnmanagedType.U1)] bool extended,
        out PamojaJ1939Id outMessage);

    /// <summary>Composes the extended identifier a set of J1939 fields describes.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_can_j1939_compose(
        byte priority,
        uint pgn,
        byte source,
        byte destination);

    /// <summary>Composes the identifier of a J1939 broadcast.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_can_j1939_broadcast(byte priority, uint pgn, byte source);

    /// <summary>The byte a J1939 sender writes for a signal it is not reporting.</summary>
    public const byte J1939NotAvailable = 0xFF;

    /// <summary>The destination address every node on the bus reads.</summary>
    public const byte J1939BroadcastAddress = 0xFF;

    /// <summary>The priority a control message takes, ahead of ordinary traffic.</summary>
    public const byte J1939PriorityControl = 3;

    /// <summary>The priority ordinary traffic takes.</summary>
    public const byte J1939PriorityDefault = 6;

    /// <summary>The priority that yields to everything else on the bus.</summary>
    public const byte J1939PriorityLowest = 7;

    /// <summary>Builds a J1939 payload with every signal marked not available.</summary>
    [LibraryImport(Library)]
    public static partial PamojaJ1939Signals pamoja_can_signals_new();

    /// <summary>Writes a one-byte signal at the offset its group defines.</summary>
    [LibraryImport(Library)]
    public static partial PamojaJ1939Signals pamoja_can_signals_set_u8(
        PamojaJ1939Signals signals,
        nuint at,
        byte value);

    /// <summary>Writes a two-byte little-endian signal at the offset its group defines.</summary>
    [LibraryImport(Library)]
    public static partial PamojaJ1939Signals pamoja_can_signals_set_u16(
        PamojaJ1939Signals signals,
        nuint at,
        ushort value);

    /// <summary>Reads a one-byte signal at the offset its group defines.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_can_signals_u8(
        PamojaJ1939Signals signals,
        nuint at,
        out byte outValue);

    /// <summary>Reads a two-byte little-endian signal at the offset its group defines.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_can_signals_u16(
        PamojaJ1939Signals signals,
        nuint at,
        out ushort outValue);

    /// <summary>The lowest 7-bit address the I2C specification keeps for itself.</summary>
    public const byte I2cReservedFrom = 0x78;

    /// <summary>The first 7-bit address above the reserved block at the bottom.</summary>
    public const byte I2cReservedBelow = 0x08;

    /// <summary>Validates a 7-bit I2C address.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_i2c_address_seven_bit(
        byte address,
        out PamojaI2cAddress outAddress);

    /// <summary>Validates a 10-bit I2C address.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_i2c_address_ten_bit(
        ushort address,
        out PamojaI2cAddress outAddress);

    /// <summary>Returns how many bytes an address frame occupies.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_i2c_address_frame_len(PamojaI2cAddress address);

    /// <summary>Writes the address bytes a controller puts on the bus.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_i2c_address_frame(
        PamojaI2cAddress address,
        PamojaI2cDirection direction,
        Span<byte> outFrame,
        nuint outFrameCap,
        out nuint outLen);

    /// <summary>Reports whether an address falls in a reserved range.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_i2c_address_is_reserved(PamojaI2cAddress address);

    /// <summary>Reports whether an address is the general call address 0x00.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_i2c_address_is_general_call(PamojaI2cAddress address);

    /// <summary>Returns the clock polarity and phase an SPI mode number names.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_spi_mode_cpol_cpha(
        byte mode,
        [MarshalAs(UnmanagedType.U1)] out bool outCpol,
        [MarshalAs(UnmanagedType.U1)] out bool outCpha);

    /// <summary>Returns the SPI mode number a clock polarity and phase name.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_spi_mode_from_cpol_cpha(
        [MarshalAs(UnmanagedType.U1)] bool cpol,
        [MarshalAs(UnmanagedType.U1)] bool cpha);

    /// <summary>Returns the level a boolean names.</summary>
    [LibraryImport(Library)]
    public static partial PamojaPinLevel pamoja_pin_level_from_bool(
        [MarshalAs(UnmanagedType.U1)] bool high);

    /// <summary>Returns the opposite level.</summary>
    [LibraryImport(Library)]
    public static partial PamojaPinLevel pamoja_pin_level_inverted(PamojaPinLevel level);

    /// <summary>Reports whether a transition fires an interrupt trigger.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_pin_edge_triggered_by(
        PamojaPinEdge edge,
        PamojaPinLevel from,
        PamojaPinLevel to);

    /// <summary>Returns the physical level representing a logical state.</summary>
    [LibraryImport(Library)]
    public static partial PamojaPinLevel pamoja_pin_polarity_level(
        PamojaPinPolarity polarity,
        [MarshalAs(UnmanagedType.U1)] bool asserted);

    /// <summary>Reports whether a physical level means the signal is asserted.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_pin_polarity_is_asserted(
        PamojaPinPolarity polarity,
        PamojaPinLevel level);
}
